Given the container structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
-</head>
-<body>
-    Hello World!
-</body>
+  </head>
+  <body>
+    <nav id="navbar">
+      <div class="navlink navlink-left">
+        <div>Home</div>
+        <div>Education</div>
+        <div>Skills</div>
+        <div>Project</div>
+      </div>
+      <div class="navlink navlink-right">
+        <div>Contact</div>
+        <div>About Me</div>
+      </div>
+    </nav>
+    <section id="hero-section">
+      <div class="hero-text-container hero-container">
+        <div class="left-vertical-text-container">
+          <div><h5 id="product-design">Product desiginer</h5></div>
+          <div id="vertical-line"></div>
+          <div><h5 id="year">2024</h5></div>
+        </div>
+        <div class="right-horizontal-text-container">
+          <div class="top-highlites-container">
+            <div class="left-highlight">
+              <h1>+200</h1>
+              <p>Project completed</p>
+            </div>
+            <div class="right-highlight">
+              <h1>+50</h1>
+              <p>Startup raised</p>
+            </div>
+          </div>
+          <div class="mid-intro-container">
+            <div>
+              <h1>Hello</h1>
+              <p>-It's Nagmani Kumar Pandey a software developer</p>
+            </div>
+          </div>
+          <div class="bottom-scroll-text"><p>Scroll down</p></div>
+        </div>
+      </div>
+
+      <div class="hero-img-container hero-container">
+        <img
+          src="./ChatGPT Image Jul 9, 2025, 12_55_52 AM.png"
+          height="400px"
+          alt="my img"
+        />
+      </div>
+    </section>
+  </body>
 </html>
